--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "mocha": "^2.2.5",
